feat: add permission middleware and apply it to all current API
