# internal/api-gateway/dto/authentication_dto.go
@@ -6,11 +6,11 @@ type LoginRequest struct {
 }
 
 type LoginResponse struct {
-	AccessToken  string              `json:"access_token"`
-	RefreshToken string              `json:"refresh_token"`
-	FullName     string              `json:"full_name"`
-	AvatarURL    string              `json:"avatar_url"`
-	Roles        []RoleLoginResponse `json:"roles"`
+	AccessToken  string            `json:"access_token"`
+	RefreshToken string            `json:"refresh_token"`
+	FullName     string            `json:"full_name"`
+	AvatarURL    string            `json:"avatar_url"`
+	Role         RoleLoginResponse `json:"role"`
 }
 
 type RegisterRequest struct {
@@ -48,9 +48,9 @@ type RefreshTokenResponse struct {
 type CheckTokenRequest struct{}
 
 type CheckTokenResponse struct {
-	FullName  string              `json:"full_name"`
-	AvatarURL string              `json:"avatar_url"`
-	Roles     []RoleLoginResponse `json:"roles"`
+	FullName  string            `json:"full_name"`
+	AvatarURL string            `json:"avatar_url"`
+	Role      RoleLoginResponse `json:"role"`
 }
 
 type ForgotPasswordRequest struct {
@@ -81,11 +81,11 @@ type ExchangeOauthCodeRequest struct {
 }
 
 type ExchangeOauthCodeResponse struct {
-	AccessToken  string              `json:"access_token"`
-	RefreshToken string              `json:"refresh_token"`
-	FullName     string              `json:"full_name"`
-	AvatarURL    string              `json:"avatar_url"`
-	Roles        []RoleLoginResponse `json:"roles"`
+	AccessToken  string            `json:"access_token"`
+	RefreshToken string            `json:"refresh_token"`
+	FullName     string            `json:"full_name"`
+	AvatarURL    string            `json:"avatar_url"`
+	Role         RoleLoginResponse `json:"role"`
 }
 
 type OAuthProvider string
